--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Tools/noapes.io"]
 	path = Tools/noapes.io
 	url = https://github.com/shanezhiu/noapes.io
+[submodule "Tools/docker-examples"]
+	path = Tools/docker-examples
+	url = https://github.com/noapes/docker-examples.git
